# hello-rye

./: .gitignore  README.md  pyproject.toml
src/hello_rye/: __init__.py  __main__.py
tests/: test_main.py
